--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sppu-cgpa-converter",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://pinakdhabu.github.io/gpa-to-percentage/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
